feat: add skin notebook

--- a/Dockerfile.pytorch
+++ b/Dockerfile.pytorch
@@ -4,5 +4,5 @@ COPY --from=ghcr.io/astral-sh/uv:latest /uv /bin/uv
 COPY pyproject.toml uv.lock ./
 RUN uv sync
 COPY . .
-EXPOSE 8888
+EXPOSE 8888 5000
 CMD ["uv", "run", "jupyter", "lab", "--ip=0.0.0.0", "--port=8888", "--no-browser", "--allow-root", "--notebook-dir=/workspace"]
